# box

./: .gitignore  LICENSE  Makefile  PRD.md  README.md  pyproject.toml
profiles/: default.yaml  network.yaml  strict.yaml  unrestricted.yaml
skills/: test-in-isolation.md  test-pkg.md
src/box/: __init__.py  box.py  cli.py  config.py  history.py  main.py  sandbox.py
src/box/image/: manager.py
src/box/profile/: profile.py
src/box/runtime/: container.py
tests/: test_box.py  test_integration.py
